cache: create middleware
